--- a/src/app/pages/list-bill/list-bill.component.html
+++ b/src/app/pages/list-bill/list-bill.component.html
@@ -1,74 +1,56 @@
-<div class="container">
-    <div class="row">
-        <div class="col-12">
-            <p>bill list component</p>
-            {{ billList$ | async | json }}
-
-        </div>
-    </div>
-</div>
 <div class="content">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-md-12">
-          <div class="card">
-            <div class="card-header card-header-primary">
-              <h4 class="card-title ">Simple Table</h4>
-              <p class="card-category"> Here is a subtitle for this table</p>
-            </div>
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table">
-                  <thead class=" text-primary">
-                    <tr>
-                      <th *ngFor="let col of cols">{{ col.text }}</th>
-
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let bill of billList$ | async">
-                      <td *ngFor="let item of bill | keyvalue : originalOrder">
-                        <!-- <input [(ngModel)]="bill[key]" type="text"> -->
-                        <span>
-                          {{item.value}}
-                          
-                        </span> 
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
-            </div>
+  <div class="container">
+    <div class="row">
+      <div class="col-3 offset-4 mt-3 mb-3 pt-2 text-right">
+        <span>Select column to search in: </span>
+      </div>
+      <div class="col-2 mt-3 mb-3">
+        <select [(ngModel)]="filterKey" class="form-control">
+          <option *ngFor="let key of filterkeys" [value]="key">{{ key }}</option>
+        </select>
+      </div>
+      <div class="col-3 mt-3 mb-3">
+        <input [(ngModel)]="phrase" type="text" class="form-control" placeholder="type search phrase here...">
+      </div>
+    </div>
+  </div>
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="card card-plain">
+          <div class="card-header card-header-primary">
+            <h4 class="card-title mt-0"> Table on Plain Background</h4>
+            <p class="card-category"> Here is a subtitle for this table</p>
           </div>
-        </div>
-        <div class="col-md-12">
-          <div class="card card-plain">
-            <div class="card-header card-header-primary">
-              <h4 class="card-title mt-0"> Table on Plain Background</h4>
-              <p class="card-category"> Here is a subtitle for this table</p>
-            </div>
-            <div class="card-body">
-              <div class="table-responsive">
-                <table class="table table-hover">
-                  <thead class="">
-                    <tr>
-                      <th *ngFor="let col of cols">
-                        {{col.text}}
-                      </th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr *ngFor="let bill of billList$ | async">
-                      <td *ngFor="let item of bill | keyvalue : originalOrder">
-                        {{item.value}}
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
-              </div>
+          <div class="card-body">
+            <div class="table-responsive">
+              <table class="table table-hover">
+                <thead class="">
+                  <tr>
+                    <th *ngFor="let col of cols">
+                      {{col.text}}
+                    </th>
+                    <th class="billTableBtnGroup">Action</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let bill of billList$ | async">
+                    <td *ngFor="let item of bill | keyvalue : originalOrder">
+                      {{item.value}}
+                    </td>
+                    <td>
+                      <div class="btn-group billTableBtnGroup">
+                        <button class="btn btn-info">E</button>
+                        <button class="btn btn-danger">D</button>
+                      </div>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
