--- a/src/app/page/edit/edit-customer/edit-customer.component.html
+++ b/src/app/page/edit/edit-customer/edit-customer.component.html
@@ -3,14 +3,14 @@
       <form #customerForm="ngForm" (ngSubmit)="onUpdate(customer)">
         <div class="form-group">
           <label for="">Keresztnév</label>
-          <input name="firstName" [(ngModel)]="customer.firstName" type="text" class="form-control" required>
+          <input name="firstName" [(ngModel)]="customer.firstName" type="text" class="form-control" pattern="^[A-ZÁÉÓÖŐÜÚŰ][a-záéüöóőú]{1,10}" required>
           <div [hidden]="customerForm.controls.firstName?.valid || customerForm.controls.firstName?.pristine" class="error-message">
             Hiányzó adat!
           </div>
         </div>
         <div class="form-group">
           <label for="">Vezetéknév</label>
-          <input name="lastName" [(ngModel)]="customer.lastName" type="text" class="form-control" required>   
+          <input name="lastName" [(ngModel)]="customer.lastName" type="text" class="form-control" pattern="^[A-ZÁÉÓÖŐÜÚŰ][a-záéüöóőú]{1,10}" required>   
           <div [hidden]="customerForm.controls.lastName?.valid || customerForm.controls.lastName?.pristine" class="error-message">
             Hiányzó adat!
           </div>       
@@ -24,21 +24,21 @@
         </div>
         <div class="form-group">
           <label for="">Irányítószám</label>
-          <input name="zip" [(ngModel)]="customer.address.zip" type="number" class="form-control" required>
+          <input name="zip" [(ngModel)]="customer.address.zip" type="number" class="form-control" pattern="[0-9]{4}" required>
           <div [hidden]="customerForm.controls.zip?.valid || customerForm.controls.zip?.pristine" class="error-message">
             Hiányzó adat!
           </div>
         </div>
         <div class="form-group">
           <label for="">Ország</label>
-          <input name="country" [(ngModel)]="customer.address.country" type="text" class="form-control" required>
+          <input name="country" [(ngModel)]="customer.address.country" type="text" class="form-control" pattern="[A-Z][a-záéóöőúüű]{3,15}" required>
           <div [hidden]="customerForm.controls.country?.valid || customerForm.controls.country?.pristine" class="error-message">
             Hiányzó adat!
           </div>
         </div>
         <div class="form-group">
           <label for="">Város</label>
-          <input name="city" [(ngModel)]="customer.address.city" type="text" class="form-control" required>   
+          <input name="city" [(ngModel)]="customer.address.city" type="text" class="form-control" pattern="[A-Z][a-záéóöőúüű]{2,15}" required>   
           <div [hidden]="customerForm.controls.city?.valid || customerForm.controls.city?.pristine" class="error-message">
             Hiányzó adat!
           </div>       
