--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,11 +1,35 @@
 <div class="main-content">
     <div class="container-fluid">
         <div class="row">
-            <div *ngFor="let card of cards" class="col-lg-3 col-sm-6">
+            <div *ngFor="let card of cards" class="col-xl-3 col-sm-6">
                 <app-info-card [cardClass]="card.cardClass" [icon]="card.icon"
                     [title]="card.title" [content]="card.content"
-                    [footer]="card.footer">kártya
+                    [footer]="card.footer">
                 </app-info-card>
+            </div>
+        </div>
+        <div class="row">
+            <div class="card card-chart">
+                <div class="card-header card-header-success">
+                    <app-chart></app-chart>
+                    <div class="ct-chart" id="dailySalesChart">
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <h4 class="card-title">Daily Sales</h4>
+                    <p class="card-category">
+                        <span class="text-success"><i
+                                class="fa fa-long-arrow-up"></i> 55% </span>
+                        increase in today sales.
+                    </p>
+                </div>
+                <div class="card-footer">
+                    <div class="stats">
+                        <i class="material-icons">access_time</i> updated 4
+                        minutes ago
+                    </div>
+                </div>
             </div>
         </div>
         <!-- <div class="row">
