--- a/src/app/pages/list-customer/list-customer.component.html
+++ b/src/app/pages/list-customer/list-customer.component.html
@@ -1,8 +1,21 @@
 <div class="row">
     <div class="col-md-10 offset-1">
 
-      <div class="input-group no-border col-md-5 pb-4">
-        <input [(ngModel)]="filterPhrase" type="text" value="" class="form-control" placeholder="Filter...">
+      
+      <div class="border d-flex p-3 mb-3 bg-light">
+        <div class="filter-header">Szűrés: </div>
+        <select [(ngModel)]="filterKey" class="form-control mr-3" style="width: 200px;">
+            <option *ngFor="let fkey of filterKeys" [value]="fkey">{{ fkey }}</option>
+        </select>
+        <input [(ngModel)]="filterPhrase" class="form-control mr-sm-2" type="text" placeholder="Filter..." style="width: 300px;">
+      </div>
+      <div class="border d-flex p-3 mb-3 bg-light">
+        <div class="filter-header">Rendezés: </div>
+        <div *ngFor="let skey of filterKeys" class="filter-button" (click)="changeOrder(skey)">{{ skey }}</div>
+        <select [(ngModel)]="sorterDirection" class="form-control mr-3" style="width: 200px;">
+            <option value="1">növekvő</option>
+            <option value="2">csökkenő</option>
+        </select>
       </div>
 
       <div class="card">
@@ -25,7 +38,7 @@
               </thead>
 
               <tbody>
-                <tr *ngFor="let customer of customerList$ | async | filter:filterPhrase:filterKey ">
+                <tr *ngFor="let customer of customerList$ | async | filter:filterPhrase:filterKey | sorter:sortby:sorterDirection ">
                   <td>{{ customer.id }}</td>
                   <td>{{ customer.firstName }}</td>
                   <td>{{ customer.lastName }}</td>
