--- a/src/app/pages/customer-list/customer-list.component.html
+++ b/src/app/pages/customer-list/customer-list.component.html
@@ -8,7 +8,7 @@
                         <p class="card-category">List of customers.</p>
                     </div>
                     <div class="card my-0 px-3">
-                        <button [routerLink]="" class="btn btn-primary my-3">
+                        <button [routerLink]="['/customer/0']" class="btn btn-primary my-3">
                             Create new customer
                         </button>
                     </div>
@@ -42,7 +42,7 @@
                                         </td>
                                         <td>
                                             <div class="btn-group">
-                                                <button [routerLink]="" class="btn btn-info">
+                                                <button [routerLink]="['/customer', customer.id]" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
                                                 <button class="btn btn-danger" (click)="onDelete(customer)">
