--- a/src/app/widget/sidebar/sidebar.component.html
+++ b/src/app/widget/sidebar/sidebar.component.html
@@ -2,32 +2,32 @@
   <div class="logo"><a routerLink="/" class="simple-text logo-normal">Filmes webshop</a></div>
   <div class="sidebar-wrapper">
     <ul class="nav">
-      <li class="nav-item active" (click)=setActive($event)>
-        <a class="nav-link" routerLink="/">
+      <li class="nav-item" (click)=onClickListItem($event)>
+        <a class="nav-link " routerLink="/">
           <i class="material-icons">dashboard</i>
           <p>Dashboard</p>
         </a>
       </li>
-      <li class="nav-item" (click)=setActive($event)>
-        <a class="nav-link" routerLink="products">
+      <li class="nav-item" (click)=onClickListItem($event)>
+        <a class="nav-link" routerLink="/products">
           <i class="material-icons">cases</i>
           <p>Termékek</p>
         </a>
       </li>
-      <li class="nav-item" (click)=setActive($event)>
-        <a class="nav-link" routerLink="customers">
+      <li class="nav-item" (click)=onClickListItem($event)>
+        <a class="nav-link" routerLink="/customers">
           <i class="material-icons">people_alt</i>
           <p>Vásárlók</p>
         </a>
       </li>
-      <li class="nav-item" (click)=setActive($event)>
-        <a class="nav-link" routerLink="orders">
+      <li class="nav-item" (click)=onClickListItem($event)>
+        <a class="nav-link" routerLink="/orders">
           <i class="material-icons">shopping_cart</i>
           <p>Rendelések</p>
         </a>
       </li>
-      <li class="nav-item" (click)=setActive($event)>
-        <a class="nav-link" routerLink="bills">
+      <li class="nav-item" (click)=onClickListItem($event)>
+        <a class="nav-link" routerLink="/bills">
           <i class="material-icons">euro</i>
           <p>Pénztár</p>
         </a>
