--- a/src/app/pages/categroy-list/categroy-list.component.html
+++ b/src/app/pages/categroy-list/categroy-list.component.html
@@ -48,6 +48,7 @@
                                             {{ category[attribute.key] }}</td>                                            
                                         <td>
                                             <div class="btn-group">
+                                                <div class="btn btn-info" (click)="speak(category.name+category.description)" ><i class="fa  fa-play-circle"></i></div>
                                                 <button [routerLink]="['/category/',category.id]" 
                                                 
                                                     class="btn btn-info">
