--- a/src/app/page/dashboard/dashboard.component.html
+++ b/src/app/page/dashboard/dashboard.component.html
@@ -24,7 +24,9 @@
     ></app-chart>
   </div>
 </div>
-<div class="row">
+
+
+<!-- <div class="row">
   <div class="col-lg-6 col-md-12">
     <div class="card">
       <div class="card-header card-header-tabs card-header-primary">
@@ -468,4 +470,4 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
