--- a/src/app/pages/bill-list/bill-list.component.html
+++ b/src/app/pages/bill-list/bill-list.component.html
@@ -13,15 +13,11 @@
                         </button>
                     </div>
                     <div class="card-body col-12 col-md-6 d-flex">
-                        <input name="phrase" (keyup)="onChangePhrase($event)"
-                            class="form-control" type="text"
+                        <input name="phrase" (keyup)="onChangePhrase($event)" class="form-control" type="text"
                             placeholder="Enter phrase...">
-                        <select class="custom-select ml-2"
-                            (change)="onChangeKey($event)">
-                            <option
-                                *ngFor="let attribute of attributes | keyvalue:originalOrder"
-                                [value]="attribute.key"
-                                [selected]="setDefault(attribute.key)">Filter by
+                        <select class="custom-select ml-2" (change)="onChangeKey($event)">
+                            <option *ngFor="let attribute of attributes | keyvalue:originalOrder"
+                                [value]="attribute.key" [selected]="setDefault(attribute.key)">Filter by
                                 {{attribute.value}}</option>
                         </select>
                     </div>
@@ -35,29 +31,25 @@
                                     <th *ngFor="let attribute of attributes | keyvalue:originalOrder"
                                         (click)="onColumnSelect(attribute.key)">
                                         {{attribute.value}}
-                                        <span
-                                            *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i
+                                        <span *ngIf="(sortOrder[attribute.key] === 'ascending' )"><i
                                                 class="fa fa-angle-up"></i></span>
-                                        <span
-                                            *ngIf="(sortOrder[attribute.key] === 'descending' )"><i
+                                        <span *ngIf="(sortOrder[attribute.key] === 'descending' )"><i
                                                 class="fa fa-angle-down"></i></span>
                                     </th>
                                 </thead>
                                 <tbody>
                                     <tr
                                         *ngFor="let bill of billList$ | async | filter:phrase:filterKey | sorter:sorterKey:sortDirection">
-                                        <td
-                                            *ngFor="let attribute of attributes | keyvalue:originalOrder">
+                                        <td *ngFor="let attribute of attributes | keyvalue:originalOrder">
                                             {{ bill[attribute.key] }}</td>
                                         <td>
                                             <div class="btn-group">
-                                                <button [routerLink]="['bill/'+ bill.id]"
-                                                    class="btn btn-info">
+                                                <button [routerLink]="['bill/'+ bill.id]" class="btn btn-info">
                                                     <i class="fa fa-pencil"></i>
                                                 </button>
-                                                <button class="btn btn-danger"
-                                                    (click)="onDelete(bill)">
-                                                    <i class="fa fa-trash"></i>
+                                                <button class="btn btn-danger" data-toggle="modal"
+                                                    data-target="#confirmationDialog" (click)="setBillToDelete(bill)">
+                                                    <i class="fa fa-trash" [id]="bill.id"></i>
                                                 </button>
                                             </div>
                                         </td>
@@ -67,6 +59,36 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal" id="confirmationDialog" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title text-danger font-weight-bold">
+                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> Confirmation required
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <strong>
+                    <p>Are you sure you want to delete this bill?</p>
+                    <p class="text-center text-primary">#{{ bill.id }} ({{ bill.status }} bill)</p>
+                </strong>
+                <p>Due to tax legislation, please keep bill data for at least 5 years.
+                    <span class="text-danger">This operation cannot be undone.</span>
+                </p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-outline-primary" id="cancelButton"
+                    data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" (click)="onDelete(bill)"
+                    data-dismiss="modal">Delete</button>
             </div>
         </div>
     </div>
