--- a/src/app/page/header/header.component.html
+++ b/src/app/page/header/header.component.html
@@ -1,53 +1,57 @@
 <header class="navbar sticky-top navbar-dark bg-primary">
-  <div class="navbar-wrapped">
-    <h2 class="headerText">{{ headerText }} {{ listItemName }}</h2>
+  <div class="container">
+    <div class="navbar-wrapped">
+      <h2 class="headerText">{{ headerText }} {{ listItemName }}</h2>
+    </div>
+    <div>
+      <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#mainMenu"
+      aria-controls="navigation-index"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="sr-only">Toggle navigation</span>
+      <span class="navbar-toggler-icon icon-bar"></span>
+      <span class="navbar-toggler-icon icon-bar"></span>
+      <span class="navbar-toggler-icon icon-bar"></span>
+    </button>
+    <div class="collapse navbar-collapse justify-content-end">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="javascript:;">
+            <i class="material-icons">dashboard</i>
+            <p class="d-lg-none d-md-block">Stats</p>
+          </a>
+        </li>
+        <li class="nav-item dropdown">
+          <a
+            class="nav-link"
+            href="javascript:;"
+            id="navbarDropdownProfile"
+            data-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            <i class="material-icons">person</i>
+            <p class="d-lg-none d-md-block">Dashboard</p>
+          </a>
+          <div
+            class="dropdown-menu dropdown-menu-right"
+            aria-labelledby="navbarDropdownProfile"
+          >
+            <a class="dropdown-item" routerLink="/products">Termékek</a>
+            <a class="dropdown-item" routerLink="/customers">Vásárlók</a>
+            <a class="dropdown-item" routerLink="/orders">Rendelések</a>
+            <a class="dropdown-item" routerLink="/bills">Pénztár</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Log out</a>
+          </div>
+        </li>
+      </ul>
+    </div>
+    </div>
   </div>
-  <button
-  class="navbar-toggler"
-  type="button"
-  data-toggle="collapse"
-  data-target="#mainMenu"
-  aria-controls="navigation-index"
-  aria-expanded="false"
-  aria-label="Toggle navigation"
->
-  <span class="sr-only">Toggle navigation</span>
-  <span class="navbar-toggler-icon icon-bar"></span>
-  <span class="navbar-toggler-icon icon-bar"></span>
-  <span class="navbar-toggler-icon icon-bar"></span>
-</button>
-<div class="collapse navbar-collapse justify-content-end">
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="javascript:;">
-        <i class="material-icons">dashboard</i>
-        <p class="d-lg-none d-md-block">Stats</p>
-      </a>
-    </li>
-    <li class="nav-item dropdown">
-      <a
-        class="nav-link"
-        href="javascript:;"
-        id="navbarDropdownProfile"
-        data-toggle="dropdown"
-        aria-haspopup="true"
-        aria-expanded="false"
-      >
-        <i class="material-icons">person</i>
-        <p class="d-lg-none d-md-block">Dashboard</p>
-      </a>
-      <div
-        class="dropdown-menu dropdown-menu-right"
-        aria-labelledby="navbarDropdownProfile"
-      >
-        <a class="dropdown-item" routerLink="/products">Termékek</a>
-        <a class="dropdown-item" routerLink="/customers">Vásárlók</a>
-        <a class="dropdown-item" routerLink="/orders">Rendelések</a>
-        <a class="dropdown-item" routerLink="/bills">Pénztár</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="#">Log out</a>
-      </div>
-    </li>
-  </ul>
-</div>
 </header>
