--- a/src/app/editors/edit-order/edit-order.component.html
+++ b/src/app/editors/edit-order/edit-order.component.html
@@ -41,11 +41,22 @@
                                 </div>
                                 <div class="form-group">
                                     <label for="orderDate">{{ attributes.orderDate }}<span class="star"> *</span></label>
-                                    <input name="orderDate" [(ngModel)]="order.orderDate" class="form-control" type="date" required>
-                                    <div [hidden]="orderForm.controls.orderDate?.valid || orderForm.controls.orderDate?.pristine" class="error-message">
-                                        {{attributes.orderDate}} is required and can only be a number.
+                                    <div class="input-group">
+                                     <input name="orderDate" [(ngModel)]="order.orderDate" class="form-control"
+                                        placeholder="yyyy-mm-dd" type="text"
+                                        ngbDatepicker #d="ngbDatepicker"
+                                         required>
+                                        <div [hidden]="orderForm.controls.orderDate?.valid || orderForm.controls.orderDate?.pristine"           class="error-message">
+                                            {{attributes.orderDate}} is required and can only be a number.
+                                        </div>
+                                        <div class="input-group-append">
+                                        <button class="btn btn-outline-secondary calendar" (click)="d.toggle()" type="button"></button>
+                                        </div>
                                     </div>
                                 </div>
+
+                    
+
                                 <div class="form-group">
                                     <label for="paymentDueDate">{{ attributes.paymentDueDate }}<span class="star"> *</span></label>
                                     <div class="input-group">
